--- a/jenkins_job/Jenkinsfile
+++ b/jenkins_job/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent { docker { image 'python:3.10.7-alpine' } }
     stages {
-        stage('build') {
+        stage('run python script') {
             steps {
                 sh 'python --version'
             }
