--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
       - ${HOME}/Documents/CV/Aurora_HA/GreatDevOps/jenkins_configuration:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
   agent:
-    image: jenkins/ssh-agent:jdk11
+    image: aurora/ssh-agent-python
     privileged: true
     user: root
     container_name: agent
