run simple python from jenkins file

--- a/jenkins_job/Jenkinsfile
+++ b/jenkins_job/Jenkinsfile
@@ -1,9 +1,18 @@
 pipeline {
-    node("jenkins_agent") {
-        stage("run python script"){
-            echo 'hello'
-            sh "ls -a"
+  agent     { label 'jenkins_agent' }
+  //environment { MACHINE_IP=buildUtils.ip(dscr:true) }
+  stages { 
+    stage('Checkout from GITHUB') { 
+      steps {
+        script {
+          sh "pwd"
+          sh "ls -l"
+          sh "python"
         }
+      }
+    }    
+  }
+}
+
     
-}
-}
+          
