--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ jenkins_configuration/workspace/*
 jenkins_configuration/caches/*
 jenkins_configuration/logs/*
 jenkins_configuration/jobs/DevOps_is_great/builds/*
+jenkins_configuration/jobs/trigger-PR/*
