--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 jenkins_configuration/workspace/*
 jenkins_configuration/caches/*
 jenkins_configuration/logs/*
+jenkins_configuration/jobs/*/builds/*
+
